--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -72,6 +72,13 @@
                                 <a class="nav-item nav-link" href="{{ url_for('auth.login') }}">Login</a>
                                 <a class="nav-item nav-link" href="{{ url_for('auth.register') }}">Register</a>
                             {% else %}
+                                <a class="nav-item nav-link" href="{{ url_for('users.messages') }}">
+                                    Messages
+                                    {% set new_messages = current_user.new_messages() %}
+                                    {% if new_messages %}
+                                        <span class="badge">{{ new_messages }}</span>
+                                    {% endif %}
+                                </a>
                                 <a class="nav-item nav-link" href="{{ url_for('posts.new_post') }}">New Post</a>
                                 <a class="nav-item nav-link" href="{{ url_for('users.user', username=current_user.username) }}">Profile</a>
                                 <a class="nav-item nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
@@ -117,7 +124,7 @@
             </div>
         </main>
         <div>
-            <footer class="page-footer font-small fixed-bottom">
+            <footer class="page-footer font-small" style='margin: bottom 0;'>
                 <div class="container-fluid text-center">
                     <div>
                         <a class="item-social" href="https://github.com/antoniovmonge"><i class="fab fa-github"></i></a>
