--- a/app/templates/users/user.html
+++ b/app/templates/users/user.html
@@ -13,7 +13,7 @@
                 {% endif %}
                 
                 <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
-                <!-- user authenticated -->
+                <!-- USER authenticated -->
                 {% if current_user.is_authenticated %}
                     {% if user == current_user %}
                         <p><a href="{{ url_for('users.edit_profile') }}">Edit your profile</a></p>
@@ -32,8 +32,15 @@
                             </form>
                         </p>
                     {% endif %}
+                    {% if user != current_user %}
+                        <p>
+                            <a href="{{ url_for('users.send_message', recipient=user.username) }}">
+                                Send private message
+                            </a>
+                        </p>
+                    {% endif %}
                 {% endif %}
-                <!-- Endif -->
+                <!-- Endif USER Authenticated -->
             </div>
         </div>
     </div>
