--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -72,12 +72,14 @@
                                 <a class="nav-item nav-link" href="{{ url_for('auth.login') }}">Login</a>
                                 <a class="nav-item nav-link" href="{{ url_for('auth.register') }}">Register</a>
                             {% else %}
-                                <a class="nav-item nav-link" href="{{ url_for('users.messages') }}">
+                                <a class="nav-item nav-link" href="{{ url_for('messages.messages') }}">
                                     Messages
                                     {% set new_messages = current_user.new_messages() %}
-                                    {% if new_messages %}
-                                        <span class="badge">{{ new_messages }}</span>
-                                    {% endif %}
+                                    <span id="message_count" class="badge"
+                                    style="visibility: {% if new_messages %}visible
+                                                        {% else %}hidden {% endif %};">
+                                    {{ new_messages }}
+                                </span>
                                 </a>
                                 <a class="nav-item nav-link" href="{{ url_for('posts.new_post') }}">New Post</a>
                                 <a class="nav-item nav-link" href="{{ url_for('users.user', username=current_user.username) }}">Profile</a>
@@ -102,8 +104,12 @@
                 </div>
                 <div class="col-md-4">
                     {% if current_user.is_authenticated %}
-                        <div class="content-section">
-                            <p></p>
+                        <div class="content-section text-center">
+                            <br>
+                            <img class="rounded-circle"  src="{{ current_user.avatar(64) }}">
+                            <div>
+                                <h3><a class="mr-2h" href="{{ url_for('users.user', username=current_user.username) }}">{{ current_user.username }}</a></h3> 
+                            </div>
                         </div>
                     {% endif %}
                     <div class="content-section">
@@ -140,7 +146,15 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    
+        <!-- extra javascript -->
+        <script>
+            // ...
+            function set_message_count(n) {
+                $('#message_count').text(n);
+                $('#message_count').css('visibility', n ? 'visible' : 'hidden');
+            }
+        </script>
+        
     </body>
 </html>
 
