--- a/app/templates/users/user.html
+++ b/app/templates/users/user.html
@@ -34,7 +34,7 @@
                     {% endif %}
                     {% if user != current_user %}
                         <p>
-                            <a href="{{ url_for('users.send_message', recipient=user.username) }}">
+                            <a href="{{ url_for('messages.send_message', recipient=user.username) }}">
                                 Send private message
                             </a>
                         </p>
