--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -7,14 +7,14 @@
                 <legend class='border-bottom mb-4'>Sign In</legend>
                 <p>
                     {{ form.email.label }}<br>
-                    {{ form.email(size=32) }}
+                    {{ form.email(type="email", class="form-control", placeholder="Enter email") }}
                     {% for error in form.email.errors %}
                         <span style='color: red;'>[{{ error }}]</span>
                     {% endfor %}
                 </p>
                 <p>
                     {{ form.password.label }} <br>
-                    {{ form.password(size=32) }}
+                    {{ form.password(type="password", class="form-control", placeholder="Password") }}
                     {% for error in form.password.errors %}
                         <span style='color: red;'>[{{ error }}]</span>
                     {% endfor %}
